--- a/forward-envoy.yaml
+++ b/forward-envoy.yaml
@@ -4,10 +4,31 @@ static_resources:
       socket_address:
         address: 0.0.0.0
         port_value: 80
+    filter_chains:
+    - filters:
+      - name: envoy.http_connection_manager
+        typed_config:
+          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
+          codec_type: auto
+          stat_prefix: ingress_http
+          route_config:
+            name: local_route
+            virtual_hosts:
+            - name: service
+              domains:
+              - "*"
+              routes:
+              - match:
+                  prefix: /
+                route:
+                  cluster: proxy
+          http_filters:
+          - name: envoy.router
+            typed_config: {}
   clusters:
   - name: proxy
     connect_timeout: 0.25s
-    type: static
+    type: strict_dns
     lb_policy: round_robin
     load_assignment:
       cluster_name: proxy
@@ -17,7 +38,7 @@ static_resources:
             address:
               socket_address: 
                 address: proxy
-                port_value: 80
+                port_value: 9090
 admin:
   access_log_path: "/dev/null"
   address:
