--- a/Dockerfile-forward
+++ b/Dockerfile-forward
@@ -2,4 +2,4 @@ FROM envoyproxy/envoy-dev:latest
 
 RUN apt-get update && apt-get -q install -y \
     curl
-CMD /usr/local/bin/envoy -c /etc/forward-envoy.yaml --service-cluster forward-envoy
+CMD /usr/local/bin/envoy -c /etc/forward-envoy.yaml --service-cluster forward-envoy --log-path /tmp/elog --log-level debug
