Add certificate and private key

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,8 @@ services:
       dockerfile: Dockerfile-proxy
     volumes:
       - ./proxy-envoy.yaml:/etc/proxy-envoy.yaml
+      - ./cert.pem:/etc/cert.pem
+      - ./key.pem:/etc/key.pem
     networks:
       envoymesh:
         aliases:
