--- a/forward-envoy.yaml
+++ b/forward-envoy.yaml
@@ -44,6 +44,7 @@ static_resources:
               socket_address:
                 address: proxy
                 port_value: 443
+    tls_context: {}
 admin:
   access_log_path: "/dev/null"
   address:
