--- a/proxy/client-envoy.yaml
+++ b/proxy/client-envoy.yaml
@@ -25,6 +25,16 @@ static_resources:
           http_filters:
           - name: envoy.router
             typed_config: {}
+  - address:
+      socket_address:
+        address: 0.0.0.0
+        port_value: 6666
+    filter_chains:
+    - filters:
+      - name: envoy.tcp_proxy
+        config:
+          stat_prefix: ingress_tcp
+          cluster: server_bk
   clusters:
   - name: server
     connect_timeout: 0.25s
@@ -42,29 +52,26 @@ static_resources:
         - endpoint:
             address:
               socket_address:
-                address: server
-                port_value: 80
+                address: 127.0.0.1
+                port_value: 6666
+  - name: server_bk
+    connect_timeout: 0.25s
+    type: strict_dns
+    lb_policy: round_robin
+    load_assignment:
+      cluster_name: server_bk
+      endpoints:
       - locality:
-          region: Asia-East
+          region: US-West
           zone: az1
           sub_zone: sub1
-        priority: 1
+        priority: 0
         lb_endpoints:
-        - endpoint:
-            address:
-              socket_address:
-                address: 34.230.136.58
-                port_value: 80
         - endpoint:
             address:
               socket_address:
                 address: httpbin.org
                 port_value: 80
-        - endpoint:
-            address:
-              socket_address:
-                address: server
-                port_value: 443
 admin:
   access_log_path: "/dev/null"
   address:
