--- a/proxy/server-envoy.yaml
+++ b/proxy/server-envoy.yaml
@@ -21,50 +21,49 @@ static_resources:
               - match:
                   prefix: /
                 route:
-                  cluster: server
+                  cluster: local_service
+          http_filters:
+          - name: envoy.router
+            typed_config: {}
+  - address:
+      socket_address:
+        address: 0.0.0.0
+        port_value: 443
+    filter_chains:
+    - filters:
+      - name: envoy.http_connection_manager
+        typed_config:
+          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
+          codec_type: auto
+          stat_prefix: ingress_http
+          route_config:
+            name: local_route
+            virtual_hosts:
+            - name: service
+              domains:
+              - "*"
+              routes:
+              - match:
+                  prefix: /
+                route:
+                  cluster: local_service
           http_filters:
           - name: envoy.router
             typed_config: {}
   clusters:
-  - name: server
+  - name: local_service
     connect_timeout: 0.25s
     type: strict_dns
     lb_policy: round_robin
     load_assignment:
-      cluster_name: server
+      cluster_name: local_service
       endpoints:
-      - locality:
-          region: US-West
-          zone: az1
-          sub_zone: sub1
-        priority: 0
-        lb_endpoints:
+      - lb_endpoints:
         - endpoint:
             address:
               socket_address:
-                address: server
+                address: httpbin
                 port_value: 80
-      - locality:
-          region: Asia-East
-          zone: az1
-          sub_zone: sub1
-        priority: 1
-        lb_endpoints:
-        - endpoint:
-            address:
-              socket_address:
-                address: 34.230.136.58
-                port_value: 80
-        - endpoint:
-            address:
-              socket_address:
-                address: httpbin.org
-                port_value: 80
-        - endpoint:
-            address:
-              socket_address:
-                address: server
-                port_value: 443
 admin:
   access_log_path: "/dev/null"
   address:
