--- a/proxy/client-envoy.yaml
+++ b/proxy/client-envoy.yaml
@@ -26,9 +26,8 @@ static_resources:
           - name: envoy.router
             typed_config: {}
   - address:
-      socket_address:
-        address: 0.0.0.0
-        port_value: 6666
+      pipe:
+        path: fallback-cluster-server_bk
     filter_chains:
     - filters:
       - name: envoy.tcp_proxy
@@ -52,8 +51,18 @@ static_resources:
         - endpoint:
             address:
               socket_address:
-                address: 127.0.0.1
-                port_value: 6666
+                address: server
+                port_value: 80
+      - locality:
+          region: US-East
+          zone: az1
+          sub_zone: sub1
+        priority: 1
+        lb_endpoints:
+        - endpoint:
+            address:
+              pipe:
+                path: fallback-cluster-server_bk
   - name: server_bk
     connect_timeout: 0.25s
     type: strict_dns
@@ -61,12 +70,7 @@ static_resources:
     load_assignment:
       cluster_name: server_bk
       endpoints:
-      - locality:
-          region: US-West
-          zone: az1
-          sub_zone: sub1
-        priority: 0
-        lb_endpoints:
+      - lb_endpoints:
         - endpoint:
             address:
               socket_address:
