--- a/issue/Dockerfile-client
+++ b/issue/Dockerfile-client
@@ -1,3 +1,3 @@
-FROM envoyproxy/envoy-alpine-debug-dev:latest
+FROM debian:stable
 
 CMD /usr/local/bin/envoy -c /etc/client-envoy.yaml --service-cluster client-envoy --log-path /tmp/elog --log-level trace
