--- a/proxy/client-envoy.yaml
+++ b/proxy/client-envoy.yaml
@@ -25,6 +25,7 @@ static_resources:
           http_filters:
           - name: envoy.router
             typed_config: {}
+          http2_protocol_options: {}
   - address:
       pipe:
         path: fallback-cluster-server_bk
