--- a/aggregate/forward-envoy.yaml
+++ b/aggregate/forward-envoy.yaml
@@ -21,47 +21,48 @@ static_resources:
               - match:
                   prefix: /
                 route:
-                  cluster: proxy
+                  cluster: aggregate_cluster
           http_filters:
           - name: envoy.router
             typed_config: {}
   clusters:
   - name: aggregate_cluster
+    connect_timeout: 0.25s
     cluster_type:
-      name: envoy.cluster.aggregate
+      name: envoy.clusters.aggregate
       typed_config:
-        "@type": type.google.apis.com/envoy.config.cluster.aggregate.ClusterConfig
+        "@type": type.googleapis.com/envoy.config.cluster.aggregate.ClusterConfig
         lb_clusters:
         - priority: 0
           cluster:
-            name: proxy
+            name: proxy1
             connect_timeout: 0.25s
             type: strict_dns
             lb_policy: round_robin
             load_assignment:
-              cluster_name: proxy
-                endpoints:
-                - lb_endpoints:
-                  - endpoint:
-                      address:
-                        socket_address:
-                          address: proxy
-                          port_value: 80
+              cluster_name: proxy1
+              endpoints:
+              - lb_endpoints:
+                - endpoint:
+                    address:
+                      socket_address:
+                        address: proxy
+                        port_value: 80
         - priority: 0
           cluster:
-            name: proxy
+            name: proxy2
             connect_timeout: 0.25s
             type: strict_dns
             lb_policy: round_robin
             load_assignment:
-              cluster_name: proxy
-                endpoints:
-                - lb_endpoints:
-                  - endpoint:
-                      address:
-                        socket_address:
-                          address: proxy
-                          port_value: 443
+              cluster_name: proxy2
+              endpoints:
+              - lb_endpoints:
+                - endpoint:
+                    address:
+                      socket_address:
+                        address: proxy
+                        port_value: 443
             tls_context: {}
 admin:
   access_log_path: "/dev/null"
