--- a/inspector-counter/Dockerfile-server
+++ b/inspector-counter/Dockerfile-server
@@ -1,3 +1,6 @@
 FROM amd64/debian:latest
 
+RUN apt-get update && apt-get install -y \
+curl
+
 CMD /usr/local/bin/envoy -c /etc/server-envoy.yaml --service-cluster server-envoy --log-path /tmp/elog --log-level trace
