--- a/inspector/Dockerfile-client
+++ b/inspector/Dockerfile-client
@@ -1,3 +1,3 @@
-FROM envoyproxy/envoy-alpine-debug-dev:latest
+FROM amd64/debian:latest
 
 CMD /usr/local/bin/envoy -c /etc/client-envoy.yaml --service-cluster client-envoy --log-path /tmp/elog --log-level trace
