--- a/tcp/client-envoy.yaml
+++ b/tcp/client-envoy.yaml
@@ -3,7 +3,7 @@ static_resources:
   - address:
       socket_address:
         address: 0.0.0.0
-        port_value: 6666
+        port_value: 8000
     filter_chains:
     - filters:
       - name: envoy.tcp_proxy
@@ -17,11 +17,11 @@ static_resources:
   clusters:
   - name: server
     connect_timeout: 0.25s
-    type: strict_dns
+    type: static
     lb_policy: round_robin
     hosts:
     - socket_address:
-        address: 54.172.95.6
+        address: 34.230.193.231
         port_value: 80
 admin:
   access_log_path: "/dev/null"
